--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-label": "^2.1.0",
     "@tabler/icons-react": "^3.21.0",
     "autoprefixer": "^10.4.20",
@@ -17,6 +18,7 @@
     "framer-motion": "^11.11.11",
     "next": "15.0.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4"
   },
