--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@faker-js/faker": "^9.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.1.6",
     "@radix-ui/react-label": "^2.1.0",
     "@tabler/icons-react": "^3.21.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
+    "mongoose": "^8.8.1",
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
