--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,1 @@
-MONGO_URL1=mongodb+srv://visheshgautamofficial:cc2jTlTRmcfqrcPl@cluster0.hharn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-PORT = 4323
-
-MONGO_URL2=mongodb://127.0.0.1:27017/Blogs
+NODE_ENV=development
