--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.1.6",
     "@radix-ui/react-label": "^2.1.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "@tabler/icons-react": "^3.21.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
@@ -27,6 +29,8 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
