--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,15 @@
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
+    "jose": "^5.9.6",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.1",
     "next": "15.0.2",
-    "react": "^18.3.1",
+    "next-client-cookies": "^2.0.0",
+    "react": "^19.0.0",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1",
+    "react-cookie": "^7.2.2",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^6.28.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
@@ -39,8 +43,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
