--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,4 +1,16 @@
 {
   "extends": 
-  ["next/core-web-vitals", "next/typescript"]
+  ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    // Suppress 'unused variables'
+    "@typescript-eslint/no-unused-vars": "off",
+    // Suppress 'unescaped entities in JSX'
+    "react/no-unescaped-entities": "off",
+    // Suppress missing dependencies in React hooks
+    "react-hooks/exhaustive-deps": "off",
+    // Suppress unreachable code errors
+    "no-unreachable": "off",
+    // Suppress empty object type warnings
+    "@typescript-eslint/no-empty-interface": "off"
+  }
 }
