--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-NODE_ENV=development
+NODE_ENV=production
 MONGOURL=mongodb+srv://visheshgautamofficial:jOtbQen04ffxWHwM@cluster1.2fogh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
