--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
-NODE_ENV=production
+NODE_ENV=development
+VERCEL_ORIGIN = https://my-first-react-b4efx9gmn-vishesh-1111s-projects.vercel.app
+LOCAL_ORIGIN = http://localhost:3000
 MONGOURL=mongodb+srv://visheshgautamofficial:jOtbQen04ffxWHwM@cluster1.2fogh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+LOCAL_MONGO__URL = mongodb://127.0.0.1:27017/db7
+PORT = 5000
