admin error resolved

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,7 @@
-
-VERCEL_ORIGIN = https://my-first-react-lq48vssim-vishesh-1111s-projects.vercel.app
+NODE_ENV=development
+# VERCEL_ORIGIN = https://my-first-react-lq48vssim-vishesh-1111s-projects.vercel.app
+VERCEL_ORIGIN = https//my-first-react-app-jade.vercel.app
+LOCAL_ORIGIN = http://localhost:3000
 MONGOURL=mongodb+srv://visheshgautamofficial:jOtbQen04ffxWHwM@cluster1.2fogh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+LOCAL_MONGO__URL = mongodb://127.0.0.1:27017/db7
 PORT = 5000
