--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
+    "@chakra-ui/react": "^3.2.3",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.13.0",
     "@faker-js/faker": "^9.2.0",
     "@material-tailwind/react": "^2.1.10",
@@ -18,20 +19,24 @@
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
     "@tabler/icons-react": "^3.21.0",
+    "antd": "^5.22.5",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "jose": "^5.9.6",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.1",
     "next": "15.0.2",
     "next-client-cookies": "^2.0.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
