--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -11,6 +11,8 @@
     // Suppress unreachable code errors
     "no-unreachable": "off",
     // Suppress empty object type warnings
-    "@typescript-eslint/no-empty-interface": "off"
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-empty-object-type": "off"
+
   }
 }
