--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,5 @@
+
 NODE_ENV=development
-# VERCEL_ORIGIN = https://my-first-react-lq48vssim-vishesh-1111s-projects.vercel.app
-VERCEL_ORIGIN = https//my-first-react-app-jade.vercel.app
-LOCAL_ORIGIN = http://localhost:3000
+VERCEL_ORIGIN = https://my-first-react-app-jade.vercel.app
 MONGOURL=mongodb+srv://visheshgautamofficial:jOtbQen04ffxWHwM@cluster1.2fogh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
-LOCAL_MONGO__URL = mongodb://127.0.0.1:27017/db7
 PORT = 5000
