--- a/client/package.json
+++ b/client/package.json
@@ -19,23 +19,26 @@
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
     "@tabler/icons-react": "^3.21.0",
+    "@tailwindcss/typography": "^0.5.15",
     "antd": "^5.22.5",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.1",
-    "next": "15.0.2",
+    "next": "^15.1.3",
     "next-client-cookies": "^2.0.0",
     "next-themes": "^0.4.4",
-    "react": "^18.3.1",
+    "react": "^18.3.0",
     "react-bootstrap": "^2.10.5",
     "react-cookie": "^7.2.2",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.3.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "socket.io": "^4.8.1",
@@ -43,13 +46,14 @@
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
