--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,8 @@
 
+
 NODE_ENV=development
-# LOCAL_ORIGIN=http://localhost:3000
-# LOCAL_MONGO__URL=mongodb://127.0.0.1:27017/db7
+ LOCAL_ORIGIN=http://localhost:3000
+ LOCAL_MONGO__URL=mongodb://127.0.0.1:27017/db7
 VERCEL_ORIGIN = https://my-first-react-app-jade.vercel.app
 MONGOURL=mongodb+srv://visheshgautamofficial:jOtbQen04ffxWHwM@cluster1.2fogh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
 PORT = 5000
