--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@stripe/stripe-js": "^4.9.0",
     "@tabler/icons-react": "^3.21.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-query": "^4.36.1",
     "antd": "^5.22.5",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
