--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@faker-js/faker": "^9.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.1.6",
-    "@nanostores/react": "github:ai/react",
+    "@nanostores/react": "https://github.com/ai/react.git" ,
     "@radix-ui/react-label": "^2.1.0",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
