--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 
 
-NODE_ENV=development
+ NODE_ENV=development
  LOCAL_ORIGIN=http://localhost:3000
  LOCAL_MONGO__URL=mongodb://127.0.0.1:27017/db7
  PORT = 5000
+ GROQ_API_KEY=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
