--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,14 @@
     "@faker-js/faker": "^9.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.1.6",
-    "@nanostores/react": "https://github.com/ai/react.git" ,
+    "@nanostores/react": "https://github.com/ai/react.git",
     "@radix-ui/react-label": "^2.1.0",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
     "@tabler/icons-react": "^3.21.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^5.62.14",
     "ai": "^4.0.22",
     "antd": "^5.22.5",
     "autoprefixer": "^10.4.20",
