--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,7 +12,11 @@
     "no-unreachable": "off",
     // Suppress empty object type warnings
     "@typescript-eslint/no-empty-interface": "off",
-    "@typescript-eslint/no-empty-object-type": "off"
+    "@typescript-eslint/no-empty-object-type": "off",
+    "@typescript-eslint/ban-ts-comment": [
+      "error",
+      { "ts-ignore": false }
+    ]
 
   }
 }
