Integrated custom  LLM using RAG

--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "bg",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node app.js",
     "build": "npm run build",
@@ -12,6 +13,12 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
+    "@huggingface/hub": "^1.0.0",
+    "@huggingface/inference": "^2.8.1",
+    "@langchain/community": "^0.3.24",
+    "@langchain/core": "^0.3.30",
+    "@langchain/mongodb": "^0.1.0",
+    "@langchain/openai": "^0.3.17",
     "cookie": "^1.0.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -21,7 +28,7 @@
     "env": "^0.0.2",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.9.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
