--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,9 @@
  NODE_ENV=development
  LOCAL_ORIGIN=http://localhost:3000
  LOCAL_MONGO__URL=mongodb://127.0.0.1:27017/db7
+
+ MONGOURL=mongodb+srv://visheshgautamofficial:jOtbQen04ffxWHwM@cluster1.2fogh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+ AIMONGOURL=mongodb+srv://visheshgautamofficial:JMKlyTOin8H7mfUP@cluster0.70lp1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
  PORT = 5000
  GROQ_API_KEY=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
+ HF_TOKEN = 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
