--- a/server/package.json
+++ b/server/package.json
@@ -27,11 +27,15 @@
     "ejs": "^3.1.10",
     "env": "^0.0.2",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-oauth2": "^1.8.0",
     "socket.io": "^4.8.1"
   }
 }
