added aouth debug

--- a/client/.env.local
+++ b/client/.env.local
@@ -1,4 +1,5 @@
- NEXT_PUBLIC_SERVER_URL=https://ems-1-jxzf.onrender.com
+#   NEXT_PUBLIC_SERVER_URL=https://ems-3-z3jf.onrender.com
+ NEXT_PUBLIC_SERVER_URL=http://localhost:5000
 
  
 
