--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,6 @@
  HF_TOKEN = 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
  GOOGLE_CLIENT_ID=1056976489798-kisv14mcbpptgr3715u0r9cl9g30qpfd.apps.googleusercontent.com
  GOOGLE_CLIENT_SECRET=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
+ serverurl=http://localhost:5000
+
+ 
