resolved \ cors error

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 
 
  NODE_ENV=development
-#  LOCAL_ORIGIN=http://localhost:3000
+ LOCAL_ORIGIN=http://localhost:3000
  LOCAL_MONGO_URL=mongodb://127.0.0.1:27017/db7
  AIMONGOURL=mongodb+srv://visheshgautamofficial:JMKlyTOin8H7mfUP@cluster0.70lp1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
  PORT = 5000
