--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.13.0",
     "@faker-js/faker": "^9.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.1.6",
     "@radix-ui/react-label": "^2.1.0",
     "@stripe/react-stripe-js": "^2.8.1",
-    "@stripe/stripe-js": "^4.9.0",
+    "@stripe/stripe-js": "^4.10.0",
     "@tabler/icons-react": "^3.21.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^4.36.1",
@@ -34,18 +37,22 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.1",
-    "next": "^15.1.3",
+    "next": "^15.1.6",
     "next-client-cookies": "^2.0.0",
+    "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18.3.0",
     "react-bootstrap": "^2.10.5",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.0",
+    "react-google-button": "^0.8.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
